Multi-Ninja: Fix reusable PCHs for MSVC

Fixes: #20721